tests/fixtures/invalid/defectInvalidAssignmentOperator.yini
^ App
name = 'Hello'
txt := 'World'    // INVALID: assignment operator must be "="
